# c-demo

./: .gitignore  CMakeLists.txt  README.md  build.sh  create_debug_config.sh  create_release_config.sh
src/: .main.c.swo  .main.c.swp  main.c  main.h
