cmake_minimum_required(VERSION 3.0)

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_COMPILER gcc)

set(CMAKE_C_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall")

project(c-demo VERSION 1.0.0 LANGUAGES C)

set(EXECUTABLE_OUTPUT_PATH ./${CMAKE_BUILD_TYPE})

file(
    GLOB_RECURSE
    MY_SOURCE_FILES
    src/*
)

add_executable(${PROJECT_NAME} ${MY_SOURCE_FILES})
